Fixed the overflow on body.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
   background-position: center;
   height: 100vh;
   font-family: roboto;
+  overflow: hidden;
 }
 /* Header start */
 
